# passagemath-workspace

./: .gitignore  AGENTS.md  AGENT_STATE.md  README.md  approach.md  onboarding.md  setup.md  sync.py
exercises/: DESIGN.md  README.md  importerror-fix-pattern.ipynb  needs-sage-guards.ipynb  pyproject.toml
exercises/.ipynb_checkpoints/: needs-sage-guards-checkpoint.ipynb  pyproject-checkpoint.toml
exercises/chessboard-graphs/: chessboard-graphs.ipynb  pyproject.toml
exercises/ci-failure-discovery/: ci-failure-discovery.ipynb  pyproject.toml
exercises/importerror-fix-pattern/: importerror-fix-pattern.ipynb  pyproject.toml
exercises/interactive-simplex/: interactive-simplex.ipynb  pyproject.toml
exercises/linear-programming-duals/: linear-programming-duals.ipynb  pyproject.toml
exercises/needs-sage-guards/: needs-sage-guards.ipynb  pyproject.toml
exercises/rg-codebase-search/: pyproject.toml  rg-codebase-search.ipynb
kit/: AGENT-STATE.md  AGENTS.md  AGENT_STATE.md  CLAUDE.md  PRIVACY.md  strategy.md
logs/: mathlab_projects.html  week 1 cleaned notes.md  week 1 reflection.md
nerdsnipe/: cysignals-wasm.md  plot-repr-png.md  wasm-overview.md  webgpu-math-viz.md
projects/: lp-ergonomics.md  lp-level2-prep.md  oer-sage-discrete-math-passagemath.md  plot-display-plain-python-kernel.md  wasm-package-recipe.md
tools/: README.md  explore.py  pm-explore.md  pyproject.toml
tools/dep-graph/: dep-graph-collapsed-LR.mmd  dep-graph-full-LR.mmd  extract-dep-graph.py  render-collapsed.py
tools/pm-explore/: README.md  explore.py  pm-explore.md
(+11 files in other folders)
